2008-05-23  Peter Flanigan  <pjf@localhost>

	* lib/IPC/SRLock.pm (POD):

	Improved POD. Added POD tests

2008-05-22  Peter Flanigan  <pjf@localhost>

	* lib/IPC/SRLock/Fcntl.pm (_init):

	Replaced XML::Simple with Data::Serializer::Storable

