@@ -1,0 +1,2 @@
+CPANTS testing is hereby granted permission to post spurious nonsense
+about these modules
