@@ -4,6 +4,7 @@ lib/IPC/SRLock/ExceptionClass.pm
 lib/IPC/SRLock/Fcntl.pm
 lib/IPC/SRLock/Memcached.pm
 lib/IPC/SRLock/Sysv.pm
+LICENSE
 Makefile.PL
 MANIFEST			This list of files
 META.yml
