@@ -2,7 +2,7 @@ Name
     IPC::SRLock - Set/reset locking semantics to single thread processes
 
 Version
-    0.1.$Revision: 52 $
+    0.1.$Revision: 54 $
 
 Synopsis
        use IPC::SRLock;
